syntax = "proto3";

package notification;

import "analytics.proto";

service NotificationService {
  rpc SendNotification (SendNotificationRequest) returns (SendNotificationResponse);
  rpc ConfigureChannel (ConfigureChannelRequest) returns (ConfigureChannelResponse);
}

message SendNotificationRequest {
  Notification notification = 1;
}

message SendNotificationResponse {
  bool success = 1;
}

message ConfigureChannelRequest {
  NotificationChannel channel = 1;
}

message ConfigureChannelResponse {
  bool success = 1;
}

message Notification {
  string id = 1;
  string title = 2;
  string message = 3;
  analytics.Severity severity = 4;
  int64 timestamp = 5;
  bool read = 6;
  optional string link = 7;
  optional string cluster_id = 8;
  optional string resource_id = 9;
}

message NotificationChannel {
  string id = 1;
  string name = 2;
  bool enabled = 3;
  oneof config {
      bool in_tui = 4;
      bool system = 5;
      NtfyChannel ntfy = 6;
      WebhookChannel webhook = 7;
  }
}

message NtfyChannel {
    string url = 1;
    string topic = 2;
}

message WebhookChannel {
    string url = 1;
    map<string, string> headers = 2;
}
